<resources>
    <string name="app_name">FreeAppBlocker</string>
    <string name="channel_name">App Blocker Notifications</string>
    <string name="channel_description">Notifications for App Blocker service</string>
    <string name="admin_receiver_description">Administrator description: additional privileges to prevent uninstallation.</string>
    <string name="admin_receiver_label">Device Administrator</string>
    <string name="delete">Delete blocker</string>
    <string name="accessibility_service_description">
        This service helps to block access to specified websites to minimize distractions and enhance productivity by monitoring and blocking browser activity. No sensitive information is being accessed or stored.
    </string>
    <string name="ad_unit_id_banner" translatable="false">ca-app-pub-1957142949765830/7936152886</string>
    <string name="save_button_text">Save</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="exit_app_button_text">Exit App</string>
    <string name="add_button_text">Add</string>
    <string name="continue_button_text">Continue</string>
    <string name="ok_button_text">OK</string>
    <string name="activate_button_text">Activate</string>
    <string name="placeholder_empty_text">Your Text Here</string>
    <string name="add_keyword_text_hint">Enter keyword</string>
    <string name="activity_blocked_message">This app/site is blocked.</string>
    <string name="blocker_edit_name_hint">Edit name</string>
    <string name="blocker_manage_apps_button_description">Manage Apps Button</string>
    <string name="blocker_manage_manage_keyword_button_description">Manage Keywords Button</string>
    <string name="blocker_delete_button_description">Delete Blocker Button</string>
    <string name="lock_image_description">Lock img</string>
    <string name="app_list_icon_description">Application icon</string>
    <string name="clear_and_refresh_button">Clear &amp; Refresh</string>
    <string name="show_blocked_only_button">Show Blocked Only</string>
    <string name="show_all_apps_button">Show All Apps View</string>
    <string name="search_apps_text_bar_hint">Search apps…</string>
    <string name="cancel_notifications_button">Cancel notifications</string>
    <string name="new_name_text_hint">Enter new name</string>
    <string name="add_blocker_button_text">Add Blocker</string>
    <string name="blockers_info_message">"If the blockers aren't working, try to delete all of them, restart the app and try again. If that doesn't work, send a message using the \"Contact me\" button from the extras menu"</string>
    <string name="default_days_text">Days</string>
    <string name="default_hours_text">Hours</string>
    <string name="default_minutes_text">Minutes</string>
    <string name="default_timer_message">No timer selected</string>
    <string name="set_timer_button_text">Set Timer</string>
    <string name="strict_mode_enable_warning">
        "Strict Mode is a powerful feature designed to provide an extra layer of protection against distractions. It's perfect for those moments when you might be tempted to turn off your blockers but need help staying focused.\n\n"
        "When activated, Strict Mode prevents you from removing blockers, unmarking blocked apps, or disabling blockers. Additionally, you won’t be able to access your settings or uninstall the app while Strict Mode is active.\n\n"
        "Please note that once you enable Strict Mode, you won't be able to turn it off until the timer runs out. Make sure to double-check that you've set the timer correctly before proceeding."
    </string>
    <string name="admin_permission_motive_text">
        "Hi there! Strict mode requires admin permissions for the features below to work properly:\n\n"
        "1. **Focus Mode**: Strict mode is designed to keep you on track by blocking distractions. You won't be able to turn off the blockers, which helps you stay focused on your tasks, and prevents temptation.\n\n"
        "2. **Uninstall Protection**: Prevents you from uninstalling the app.\n\n"
        "3. **No Force Stops**: Stops you from force-stopping the app.\n\n"
        "Admin permissions are only used to ensure that strict mode works. No sensitive information is being accessed, or shared."
    </string>
    <string name="strict_mode_active_message">STRICT MODE ACTIVE</string>
    <string name="strict_mode_not_active_message">ACTIVATE</string>
    <string name="strict_mode_timer_active_message">EXTEND TIMER</string>
    <string name="strict_mode_timer_not_active_message">SET TIMER</string>
    <string name="permission_notify_intention_user">
        "Hey there! We want to be transparent about the permissions the app uses. This app requires the permissions PACKAGE_USAGE_STATS, QUERY_ALL_PACKAGES. Here's what they do:\n\n"
        "1. **PACKAGE_USAGE_STATS**: This permission allows the app to view your app usage statistics, which helps identify and block distracting apps to improve your productivity.\n\n"
        "2. **QUERY_ALL_PACKAGES**: This permission lets the app query and get information about all the apps installed on your device. This is necessary to identify and manage the apps you want to block.\n\n"
        "We understand that some users might find this level of access invasive. However, the app only uses these permissions to help you stay productive by blocking apps and notifications you mark as distractions. The app does not access, share, or save any sensitive information.\n\n" +
        "It's understandable if you're uncomfortable granting these permissions. However, the app cannot work without them. If you prefer not to use these features, you can close the app and uninstall it. We appreciate your understanding!"
    </string>
    <string name="permission_usage_access_motive_title">Usage Access Permission</string>
    <string name="permission_usage_access_motive_description">This permission allows the app to monitor which apps are being used. It is needed for detecting and blocking specific apps according to user settings.</string>
    <string name="permission_usage_access_motive_grant_button">Grant Usage Permission</string>
    <string name="permission_overlay_motive_title">Overlay Permission</string>
    <string name="permission_overlay_motive_description">This permission allows the app to display information or warnings over other apps. It is needed for blocking access to specific apps by showing a blocking screen.</string>
    <string name="permission_overlay_motive_grant_button">Grant Overlay Permission</string>
    <string name="permission_battery_motive_title">Ignore Battery Optimizations</string>
    <string name="permission_battery_motive_description">This permission allows the app to run continuously without being stopped by battery optimization settings. This makes sure the app can monitor and block apps at all times.</string>
    <string name="permission_battery_motive_grant_button">Disable Battery Optimization</string>
    <string name="permission_block_notifications_motive_title">Notification Listener Permission</string>
    <string name="permission_block_notifications_motive_description">This permission allows the app to listen to and interact with your notifications. It is necessary for blocking notifications from distracting apps.</string>
    <string name="permission_block_notifications_motive_grant_button">Grant Notification Permission</string>
    <string name="permission_accessibility_motive_title">Accessibility Permission</string>
    <string name="permission_accessibility_motive_description">This permission allows the app to monitor and block websites you mark as distracting in your blockers.</string>
    <string name="permission_accessibility_motive_grant_button">Grant Accessibility Permission</string>
    <string name="extra_settings_name_placeholder" translatable="false">Settings</string>
    <string name="extra_settings_description_placeholder" translatable="false">Changelog</string>
    <string name="extra_settings_button_text">Settings</string>
    <string name="extra_changelog_button_text">Changelog</string>
    <string name="extra_support_me_button_text">Support Me</string>
    <string name="extra_alternative_apps_button_text" translatable="false">Alternative apps</string>
    <string name="extra_short_add_button_text">Watch A Short Ad Now</string>
    <string name="extra_long_add_button_text">Watch A Long Ad Now</string>
    <string name="extra_paypal_button_text">Donate via PayPal</string>
    <string name="developer_note">"Hello there! I'm the lone dev behind this app, juggling college and code. Let’s cut to the chase: I love money! Most of us do! It keeps my lights on, my stomach full, and a roof over my head. All of that helps me keep improving this app for you. No fancy rewards for now, just my heartfelt thanks if you watch ads, turn on the banner, or donate. This app, and all of its features are free, therefore I can't really offer much, so your support means everything. Thanks for keeping the dev(me) alive!"</string>
    <string name="enable_ad_banner">Enable Ad Banner</string>
    <string name="enable_ad_banner_description">Show an ad banner at the top of the screen</string>
    <string name="watch_short_ad_on_trigger">Watch Short Ad on Trigger</string>
    <string name="watch_short_ad_on_trigger_description">Watch a short ad when a blocker gets triggered</string>
    <string name="watch_long_ad_on_trigger">Watch Long Ad on Trigger</string>
    <string name="watch_long_ad_on_trigger_description">Watch a long ad when a blocker gets triggered</string>
    <string name="block_installed_apps">Block installed apps</string>
    <string name="block_installed_apps_description">Block any apps installed while strict mode is enabled</string>
    <string name="turn_off_blockers_when_finished">Turn off blockers when finished</string>
    <string name="turn_off_blockers_when_finished_description">Turn off all blockers when strict mode is done</string>
    <string name="alternative_app_open_app_button_text">"Open App"</string>
    <string name="alternative_app_name_app_block">"AppBlock - Android"</string>
    <string name="alternative_app_description_app_block">"I've used this app in the past, it's got great features and compatibility. However, some features are locked behind a paywall. The app is maintained by a team of professional devs, so you can guarantee the quality. I can happily recommend this one."</string>
    <string name="alternative_app_name_cold_turkey">"Cold Turkey - Windows"</string>
    <string name="alternative_app_description_cold_turkey">"I am still using this application to this day. It works great, and I've found no flaws in it. Most features are free, and some non-essential features are locked behind a paywall. They are not mandatory but more of a way to support the dev. Highly recommended if you're a Windows user."</string>
    <string name="alternative_app_name_none">"iPhone - None"</string>
    <string name="alternative_app_description_none">
        "I've never owned an iPhone before, so there's nothing I can really recommend for this one.\n
        On this note, if you've got any apps you think are good and you would like to see here, you can drop me a message, and I'll check them out."
    </string>
</resources>