<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:scrollbars="none">

    <LinearLayout
            android:layout_width="match_parent"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                card_view:cardElevation="4dp"
                card_view:cardCornerRadius="8dp"
                card_view:cardBackgroundColor="@color/black">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                <TextView
                        android:id="@+id/usage_permission_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/permission_usage_access_motive_title"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:paddingBottom="8dp"/>

                <TextView
                        android:id="@+id/usage_permission_explanation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/permission_usage_access_motive_description"
                        android:textSize="14sp"
                        android:paddingBottom="16dp"/>

                <Button
                        android:id="@+id/usage_permission_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/permission_usage_access_motive_grant_button"
                        android:background="@drawable/button_background"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                card_view:cardElevation="4dp"
                card_view:cardCornerRadius="8dp"
                card_view:cardBackgroundColor="@color/black">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                <TextView
                        android:id="@+id/overlay_permission_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/permission_overlay_motive_title"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:paddingBottom="8dp"/>

                <TextView
                        android:id="@+id/overlay_permission_explanation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/permission_overlay_motive_description"
                        android:textSize="14sp"
                        android:paddingBottom="16dp"/>

                <Button
                        android:id="@+id/overlay_permission_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/permission_overlay_motive_grant_button"
                        android:background="@drawable/button_background"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                card_view:cardElevation="4dp"
                card_view:cardCornerRadius="8dp"
                card_view:cardBackgroundColor="@color/black">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                <TextView
                        android:id="@+id/battery_permission_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/permission_battery_motive_title"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:paddingBottom="8dp"/>

                <TextView
                        android:id="@+id/battery_permission_explanation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/permission_battery_motive_description"
                        android:textSize="14sp"
                        android:paddingBottom="16dp"/>

                <Button
                        android:id="@+id/battery_permission_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/permission_battery_motive_grant_button"
                        android:background="@drawable/button_background"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                card_view:cardElevation="4dp"
                card_view:cardCornerRadius="8dp"
                card_view:cardBackgroundColor="@color/black">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                <TextView
                        android:id="@+id/notification_permission_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/permission_block_notifications_motive_title"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:paddingBottom="8dp"/>

                <TextView
                        android:id="@+id/notification_permission_explanation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/permission_block_notifications_motive_description"
                        android:textSize="14sp"
                        android:paddingBottom="16dp"/>

                <Button
                        android:id="@+id/notification_permission_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/permission_block_notifications_motive_grant_button"
                        android:background="@drawable/button_background"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                card_view:cardElevation="4dp"
                card_view:cardCornerRadius="8dp"
                card_view:cardBackgroundColor="@color/black">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                <TextView
                        android:id="@+id/accessibility_permission_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/permission_accessibility_motive_title"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:paddingBottom="8dp"/>

                <TextView
                        android:id="@+id/accessibility_permission_explanation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/permission_accessibility_motive_description"
                        android:textSize="14sp"
                        android:paddingBottom="16dp"/>

                <Button
                        android:id="@+id/accessibility_permission_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/permission_accessibility_motive_grant_button"
                        android:background="@drawable/button_background"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>
