<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:padding="16dp"
              tools:ignore="ButtonStyle">

    <EditText
            android:id="@+id/keywordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_keyword_text_hint"
            android:inputType="text"
            android:autofillHints="user"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end"
            android:layout_marginTop="16dp">

        <Button
                android:id="@+id/addButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_button_text"/>

        <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_button_text"
                android:layout_marginStart="8dp"/>
    </LinearLayout>
</LinearLayout>
