<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:padding="16dp"
              android:background="@drawable/dialog_background"
              tools:ignore="ButtonStyle">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">

        <EditText
                android:id="@+id/daysInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/default_days_text"
                android:inputType="number"
                android:maxLength="1"
                android:gravity="center"
                android:padding="8dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/input_background"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="16sp"
                android:autofillHints="no"/>

        <EditText
                android:id="@+id/hoursInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/default_hours_text"
                android:inputType="number"
                android:maxLength="2"
                android:gravity="center"
                android:layout_marginEnd="4dp"
                android:padding="8dp"
                android:background="@drawable/input_background"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="16sp"
                android:autofillHints="no"/>

        <EditText
                android:id="@+id/minutesInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/default_minutes_text"
                android:inputType="number"
                android:layout_marginEnd="4dp"
                android:maxLength="2"
                android:gravity="center"
                android:padding="8dp"
                android:background="@drawable/input_background"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="16sp"
                android:autofillHints="no"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end"
            android:layout_marginTop="16dp">

        <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/cancel_button_text"
                android:background="@drawable/button_background"
                android:textColor="@android:color/white" />

        <Button
                android:id="@+id/okButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok_button_text"
                android:background="@drawable/button_background"
                android:textColor="@android:color/white" />
    </LinearLayout>
</LinearLayout>