<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:padding="16dp"
              android:background="@drawable/dialog_background">

    <EditText
            android:id="@+id/keywordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_keyword_text_hint"
            android:inputType="text"
            android:autofillHints="no"/>

    <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_button_text"
            android:layout_gravity="end"
            android:layout_marginTop="8dp" />

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/keywordRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="16dp" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end"
            android:layout_marginTop="16dp">

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancelButton"
                android:layout_width="90dp"
                android:layout_height="48dp"
                android:layout_marginEnd="8dp"
                android:text="@string/cancel_button_text"
                android:background="@drawable/blue_border_background"
                android:textColor="@android:color/white"
                android:padding="8dp"
                app:layout_constraintEnd_toStartOf="@+id/saveButton"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread"/>

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/saveButton"
                android:layout_width="90dp"
                android:layout_height="48dp"
                android:text="@string/save_button_text"
                android:background="@drawable/blue_border_background"
                android:textColor="@android:color/white"
                android:padding="8dp"
                app:layout_constraintStart_toEndOf="@+id/cancelButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread"/>
    </LinearLayout>
</LinearLayout>
