<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="200dp"
                                                   android:layout_margin="16dp"
                                                   android:background="@drawable/blue_border_background"
                                                   android:padding="16dp">

    <TextView
            android:id="@+id/blocker_name"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:maxLength="20"
            android:text=""
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            android:textColor="@android:color/white"
            android:hint="@string/blocker_edit_name_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/blocker_toggle"
            android:textColorHint="@android:color/darker_gray" />

    <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/blocker_toggle"
            android:layout_width="50dp"
            android:layout_height="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:theme="@style/Theme.FreeAppBlockerRed" />

    <ImageButton
            android:id="@+id/manage_apps_button"
            android:layout_width="25dp"
            android:layout_height="30dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/apps_icon_button"
            android:scaleType="centerInside"
            app:tint="@android:color/holo_blue_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/blocker_manage_apps_button_description"/>

    <ImageButton
            android:id="@+id/add_keyword_button"
            android:layout_width="25dp"
            android:layout_height="30dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/block_sites_icon_button"
            android:scaleType="centerInside"
            app:tint="@android:color/holo_blue_light"
            app:layout_constraintEnd_toStartOf="@id/manage_apps_button"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/blocker_manage_manage_keyword_button_description"/>

    <ImageButton
            android:id="@+id/delete_button"
            android:layout_width="25dp"
            android:layout_height="30dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_delete"
            app:tint="@android:color/holo_red_dark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/blocker_delete_button_description"/>

    <ImageView
            android:id="@+id/center_image"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/blocker_lock_img"
            app:layout_constraintTop_toBottomOf="@+id/blocker_name"
            app:layout_constraintBottom_toTopOf="@+id/manage_apps_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:contentDescription="@string/lock_image_description"/>

</androidx.constraintlayout.widget.ConstraintLayout>
